tests/ui/derive_bitfield_specifier/variant_out_of_range.stderr
error[E0277]: the trait bound `False: DiscriminantInRange` is not satisfied
  --> tests/ui/derive_bitfield_specifier/variant_out_of_range.rs:17:5
   |
17 |     External,
   |     ^^^^^^^^ the trait `DiscriminantInRange` is not implemented for `False`
   |
   = help: the trait `DiscriminantInRange` is implemented for `True`
note: required by a bound in `CheckDiscriminantInRange`
  --> src/private/checks.rs
   |
   | pub trait CheckDiscriminantInRange<A>
   |           ------------------------ required by a bound in this trait
   | where
   |     <Self::CheckType as DispatchTrueFalse>::Out: DiscriminantInRange,
   |                                                  ^^^^^^^^^^^^^^^^^^^ required by this bound in `CheckDiscriminantInRange`
   = note: `CheckDiscriminantInRange` is a "sealed trait", because to implement it you also need to implement `modular_bitfield::private::checks::DiscriminantInRange`, which is not accessible; this is usually done to force you to use one of the provided types that already implement it
   = help: the following type implements the trait:
             modular_bitfield::private::checks::True

error[E0277]: the trait bound `False: DiscriminantInRange` is not satisfied
  --> tests/ui/derive_bitfield_specifier/variant_out_of_range.rs:17:5
   |
17 |     External,
   |     ^^^^^^^^ the trait `DiscriminantInRange` is not implemented for `False`
   |
   = help: the trait `DiscriminantInRange` is implemented for `True`
note: required by a bound in `CheckDiscriminantInRange::CheckType`
  --> src/private/checks.rs
   |
   |     <Self::CheckType as DispatchTrueFalse>::Out: DiscriminantInRange,
   |                                                  ^^^^^^^^^^^^^^^^^^^ required by this bound in `CheckDiscriminantInRange::CheckType`
   | {
   |     type CheckType: DispatchTrueFalse;
   |          --------- required by a bound in this associated type
